# rag-api

./: .dockerignore  .env.example  .gitignore  CONFIGURATION.md  Dockerfile  README.md  conftest.py  docker-compose.dev.yml  docker-compose.yml  melhorias.md  pyproject.toml  requirements.txt  requirements_dev.txt
app/: database.py  dependencies.py  health.py  main.py  schemas.py  security.py  settings.py
app/db/: mongo.py
app/migrations/: env.py
app/migrations/versions/: 5b3296018b0d_create_table_document_records.py
app/models/: document.py
app/static/css/: style.css
app/templates/: dashboard.html
app/tests/: test_main.py  test_utils_db.py
app/utils/: db.py
documents/: models.py  routes.py  schemas.py
documents/tests/: test_routes.py
rag/: mongo_storage.py  process.py  rag_chain.py  routes.py  schemas.py  splitter.py  vector_store.py
rag/tests/: test_process.py  test_rag_chain.py  test_routes.py  test_splitter.py  test_vector_store.py
